# cubature

./: README.md  cubature.cabal  stack.yaml
C/: mintegration.c
src/: Cubature.hs
src-exec/: Main.hs
