name:                cubature
version:             0.1.0.0
homepage:            https://github.com/stla/cubature#readme
license:             GPL3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cubature
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  include-dirs:        C
  C-sources:           C/mintegration.c
                     , U:/Data/C/cubature-1.0.3/hcubature.c
                     , U:/Data/C/cubature-1.0.3/pcubature.c

executable testcubature
  buildable:           True
  hs-source-dirs:      src-exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cubature

source-repository head
  type:     git
  location: https://github.com/stla/cubature
